--- a/app/src/main/res/layout/activity_bookmark.xml
+++ b/app/src/main/res/layout/activity_bookmark.xml
@@ -1,9 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".Bookmark">
 
-</android.support.constraint.ConstraintLayout>
+    <FrameLayout
+        android:padding="10dp"
+        android:id="@+id/frame4"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:visibility="visible"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bgn_white">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            tools:ignore="UselessParent">
+
+            <TextView
+                android:layout_marginTop="5dp"
+                android:id="@+id/txt_favindo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Indonesia"
+                android:textAllCaps="true"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@color/grey" />
+
+            <TextView
+                android:id="@+id/txt_faveng"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Inggris"
+                android:textAllCaps="true"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@color/grey" />
+
+            <TextView
+                android:id="@+id/txt_favarab"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Arab"
+                android:textAllCaps="true"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                android:layout_marginBottom="5dp"/>
+
+
+        </LinearLayout>
+
+
+    </FrameLayout>
+
+
+    <TextView
+        android:textStyle="bold"
+        android:id="@+id/txt_nodata"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:text="@string/belum_ada_bookmark_tersimpan"
+        android:textSize="18sp"
+        android:visibility="gone" />
+
+</LinearLayout>
