--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,8 @@
     <color name="colorPrimary">#E91E63</color>
     <color name="colorPrimaryDark">#C2185B</color>
     <color name="colorAccent">#F48FB1</color>
+    <color name="transparent">#00000000</color>
+    <color name="grey">#eceded</color>
 
     <color name="colorWhite">#fff</color>
 </resources>
